Menu Hamburguesa Desarrollo del menú hamburguesa

--- a/index.html
+++ b/index.html
@@ -22,61 +22,30 @@
   </head>
 
   <body>
-    <header>
-      <nav
-        class="navbar navbar-top fixed-bottom navbar-expand-lg navbar-dark bg-c"
-      >
-        <div class="container-fluid">
-          <a class="navbar-brand ml-2" href="index.html">
-            <h1>Laboratorio de Creación Digital</h1>
-            <img
-              src="/img/lacdi-blanco.png"
-              alt="Laboratorio de Creación Digital"
-            />
-          </a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNav"
-            aria-controls="navbarNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0 align-items-center">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="lacdi.html"
-                  >LaCDi</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="investigacion.html"
-                  >Investigación</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="vinculacion.html">Vinculación</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="creacion-digital.html"
-                  >Creación Digital</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="exposiciones.html">Exposiciones</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="eventos.html">Eventos</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="noticias.html">Noticias</a>
-              </li>
-            </ul>
-          </div>
-        </div>
+    <header class="header">
+      <a href="index.html">
+        <h1>Laboratorio de Creación Digital</h1>
+        <img
+          src="/img/lacdi-blanco.png"
+          alt="Laboratorio de Creación Digital"
+        />
+      </a>
+
+      <button class="btn-menu hamburger hamburger--spin" type="button">
+        <span class="hamburger-box">
+          <span class="hamburger-inner"></span>
+        </span>
+      </button>
+      <nav class="menu">
+        <ul class="menu-style">
+          <li><a href="lacdi.html">LaCDi</a></li>
+          <li><a href="investigación.html">Investigación</a></li>
+          <li><a href="vinculacion.html">Vinculación</a></li>
+          <li><a href="creacion-digital.html">Creación Digital</a></li>
+          <li><a href="exposiciones.html">Exposiciones</a></li>
+          <li><a href="eventos.html">Eventos</a></li>
+          <li><a href="noticias.html">Noticias</a></li>
+        </ul>
       </nav>
     </header>
     <section class="container-fluid">
