Menu Hamburger Actualización del menú de hamburguesa en todas las secciones

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   </head>
 
   <body>
+
     <header class="header">
       <a href="index.html">
         <h1>Laboratorio de Creación Digital</h1>
@@ -30,12 +31,13 @@
           alt="Laboratorio de Creación Digital"
         />
       </a>
-
+      <!-- Menu de Hamburguesa -->
       <button class="btn-menu hamburger hamburger--spin" type="button">
         <span class="hamburger-box">
           <span class="hamburger-inner"></span>
         </span>
       </button>
+      
       <nav class="menu">
         <ul class="menu-style">
           <li><a href="lacdi.html">LaCDi</a></li>
@@ -48,6 +50,7 @@
         </ul>
       </nav>
     </header>
+
     <section class="container-fluid">
       <span id="top" class="ancla"></span>
       <section class="row">
@@ -207,7 +210,7 @@
               allowfullscreen
             ></iframe>
           </article>
-          <article class="desktop col-12 col-md-4">
+          <article class="col-12 col-md-4">
             <iframe
               class="youtube"
               src="https://www.youtube.com/embed/Q0g9LIf7CW4"
@@ -217,7 +220,7 @@
               allowfullscreen
             ></iframe>
           </article>
-          <article class="desktop col-12 col-md-4">
+          <article class="col-12 col-md-4">
             <iframe
               class="youtube"
               src="https://www.youtube.com/embed/_48x8Yhwoo8"
@@ -242,7 +245,7 @@
               allow="encrypted-media"
             ></iframe>
           </article>
-          <article class="desktop col-12 col-md-4">
+          <article class="col-12 col-md-4">
             <h3 class="mb-5">Inmersión Digital</h3>
             <iframe
               class="spotify"
@@ -254,7 +257,7 @@
               allow="encrypted-media"
             ></iframe>
           </article>
-          <article class="desktop col-12 col-md-4">
+          <article class="col-12 col-md-4">
             <h3 class="mb-5">The Black Note</h3>
             <iframe
               class="spotify"
@@ -277,7 +280,7 @@
 
     <footer class="container-fluid">
       <section class="">
-        <article class="redes row">
+        <article class="padding1 row">
           <article class="col-3 col-md-3 text-center my-auto">
             <a class="icon-redes" href="#">
               <img src="/img/tik-tok.png" alt="Tik-tok" />
