--- a/eventos.html
+++ b/eventos.html
@@ -15,11 +15,39 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="css/hamburguer.css" />
     <link rel="stylesheet" href="css/estilos.css" />
     <title>Eventos | LaCDi</title>
   </head>
 
   <body>
+    <header class="header">
+      <a href="index.html">
+        <h1>Laboratorio de Creación Digital</h1>
+        <img
+          src="/img/lacdi-blanco.png"
+          alt="Laboratorio de Creación Digital"
+        />
+      </a>
+      <!-- Menu de Hamburguesa -->
+      <button class="btn-menu hamburger hamburger--spin" type="button">
+        <span class="hamburger-box">
+          <span class="hamburger-inner"></span>
+        </span>
+      </button>
+
+      <nav class="menu">
+        <ul class="menu-style">
+          <li><a href="lacdi.html">LaCDi</a></li>
+          <li><a href="investigación.html">Investigación</a></li>
+          <li><a href="vinculacion.html">Vinculación</a></li>
+          <li><a href="creacion-digital.html">Creación Digital</a></li>
+          <li><a href="exposiciones.html">Exposiciones</a></li>
+          <li><a href="eventos.html">Eventos</a></li>
+          <li><a href="noticias.html">Noticias</a></li>
+        </ul>
+      </nav>
+    </header>
     <a href="/index.html"
       ><img class="desktop" src="/img/construction.png" alt="Construcción"
     /></a>
@@ -29,5 +57,12 @@
         src="/img/construction-movile.png"
         alt="Construcción"
     /></a>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
+      crossorigin="anonymous"
+    ></script>
+    <script src="js/lacdi.js" type="module"></script>
   </body>
 </html>
