--- a/exposiciones.html
+++ b/exposiciones.html
@@ -58,6 +58,36 @@
         alt="Construcción"
     /></a>
 
+    <footer class="container-fluid">
+      <section class="">
+        <article class="padding1 row">
+          <article class="col-3 col-md-3 text-center my-auto">
+            <a class="icon-redes" href="#">
+              <img src="/img/tik-tok.png" alt="Tik-tok" />
+            </a>
+          </article>
+          <article class="col-3 col-md-3 text-center my-auto">
+            <a class="icon-redes" href="#">
+              <img src="/img/youtube.svg" alt="You Tube" />
+            </a>
+          </article>
+          <article class="col-3 col-md-3 text-center my-auto">
+            <a class="icon-redes" href="#">
+              <img class="icon-redes" src="/img/spotify.svg" alt="Spotify" />
+            </a>
+          </article>
+          <article class="col-3 col-md-3 text-center my-auto">
+            <a class="icon-redes" href="#">
+              <img src="/img/twitter.svg" alt="Twitter" />
+            </a>
+          </article>
+        </article>
+        <article class="col-12">
+          <p>&copy; Laboratoiro de Creación Digital</p>
+        </article>
+      </section>
+    </footer>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
