--- a/noticias.html
+++ b/noticias.html
@@ -15,6 +15,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="css/hamburguer.css" />
     <link rel="stylesheet" href="css/estilos.css" />
     <title>Noticias | LaCDi</title>
   </head>
@@ -56,6 +57,36 @@
         src="/img/construction-movile.png"
         alt="Construcción"
     /></a>
+
+    <footer class="container-fluid">
+      <section class="">
+        <article class="padding1 row">
+          <article class="col-3 col-md-3 text-center my-auto">
+            <a class="icon-redes" href="#">
+              <img src="/img/tik-tok.png" alt="Tik-tok" />
+            </a>
+          </article>
+          <article class="col-3 col-md-3 text-center my-auto">
+            <a class="icon-redes" href="#">
+              <img src="/img/youtube.svg" alt="You Tube" />
+            </a>
+          </article>
+          <article class="col-3 col-md-3 text-center my-auto">
+            <a class="icon-redes" href="#">
+              <img class="icon-redes" src="/img/spotify.svg" alt="Spotify" />
+            </a>
+          </article>
+          <article class="col-3 col-md-3 text-center my-auto">
+            <a class="icon-redes" href="#">
+              <img src="/img/twitter.svg" alt="Twitter" />
+            </a>
+          </article>
+        </article>
+        <article class="col-12">
+          <p>&copy; Laboratoiro de Creación Digital</p>
+        </article>
+      </section>
+    </footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
