Theme Ejercicio de botón para cambio de tema

--- a/lacdi.html
+++ b/lacdi.html
@@ -39,7 +39,7 @@
 
       <nav class="menu">
         <ul class="menu-style">
-          <li><a href="lacdi.html">LaCDi</a></li>
+          <li><a href="lacdi.html" class="link-active" >LaCDi</a></li>
           <li><a href="investigación.html">Investigación</a></li>
           <li><a href="vinculacion.html">Vinculación</a></li>
           <li><a href="creacion-digital.html">Creación Digital</a></li>
