--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es" class="">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,6 +9,10 @@
       integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
       crossorigin="anonymous"
     />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -16,13 +20,12 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/hamburguer.css" />
-    <link rel="stylesheet" href="css/estilos.css" />
+    <link id="style" rel="stylesheet" href="css/estilos.css" />
     <link rel="shortcut icon" href="img/iconolacd21.png" type="image/x-icon" />
     <title>LaCDi</title>
   </head>
 
   <body>
-
     <header class="header">
       <a href="index.html">
         <h1>Laboratorio de Creación Digital</h1>
@@ -31,13 +34,19 @@
           alt="Laboratorio de Creación Digital"
         />
       </a>
+      <!-- Buttom theme -->
+      <button class="theme-button">
+        <span class="material-icons">
+          light_mode
+        </span>
+      </button>
       <!-- Menu de Hamburguesa -->
       <button class="btn-menu hamburger hamburger--spin" type="button">
         <span class="hamburger-box">
           <span class="hamburger-inner"></span>
         </span>
       </button>
-      
+
       <nav class="menu">
         <ul class="menu-style">
           <li><a href="lacdi.html">LaCDi</a></li>
@@ -125,7 +134,7 @@
         <article class="row">
           <h2>Últimos Eventos</h2>
           <section class="card mx-auto mt-4" style="max-width: 360px;">
-            <article class="row card-m0">
+            <article class="row card-m0 border">
               <div class="col-6 pe-0 ps-0 card-m0">
                 <img
                   src="https://placeimg.com/480/580/people"
@@ -133,7 +142,7 @@
                   alt="Evento X"
                 />
               </div>
-              <article class="col-6 ps-0 card-m0">
+              <article class="col-6 ps-0 card-m0 bg-c-fondo">
                 <div class="card-body">
                   <h5 class="text-card-t">Titulación de Andrés Mata</h5>
                   <!-- Máximo 25 caracteres -->
@@ -148,8 +157,8 @@
             </article>
           </section>
           <section class="card mx-auto mt-4" style="max-width: 360px;">
-            <article class="row card-m0 reverse">
-              <article class="col-6 card-m0">
+            <article class="row card-m0 reverse border">
+              <article class="col-6 card-m0 bg-c-fondo">
                 <div class="card-body pe-0">
                   <h5 class="text-card-t">Titulación de Andrés Mata</h5>
                   <!-- Máximo 25 caracteres -->
@@ -171,7 +180,7 @@
             </article>
           </section>
           <section class="card mx-auto mt-4" style="max-width: 360px;">
-            <article class="row card-m0">
+            <article class="row card-m0 border">
               <div class="col-6 pe-0 ps-0 card-m0">
                 <img
                   src="https://placeimg.com/480/580/people"
@@ -179,7 +188,7 @@
                   alt="Evento X"
                 />
               </div>
-              <article class="col-6 ps-0 card-m0">
+              <article class="col-6 ps-0 card-m0 bg-c-fondo">
                 <div class="card-body">
                   <h5 class="text-card-t">Titulación de Andrés Mata</h5>
                   <!-- Máximo 25 caracteres -->
