Cambio de tema Cambio de tema con botón e icono

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Material+Icons+Two+Tone"
+      rel="stylesheet"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -36,7 +40,7 @@
       </a>
       <!-- Buttom theme -->
       <button class="theme-button">
-        <span class="material-icons">
+        <span id="mode" class="bg-c material-icons-two-tone">
           light_mode
         </span>
       </button>
