--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <nav class="menu">
         <ul class="menu-style">
           <li><a href="lacdi.html">LaCDi</a></li>
-          <li><a href="investigación.html">Investigación</a></li>
+          <li><a href="investigacion.html">Investigación</a></li>
           <li><a href="vinculacion.html">Vinculación</a></li>
           <li><a href="creacion-digital.html">Creación Digital</a></li>
           <li><a href="exposiciones.html">Exposiciones</a></li>
