--- a/investigacion.html
+++ b/investigacion.html
@@ -6,12 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css2?family=Material+Icons+Two+Tone" rel="stylesheet"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap" rel="stylesheet">
     
     <link rel="stylesheet" href="css/hamburguer.css" />
-    <link rel="stylesheet" href="css/estilos.css">
+    <link id="style" rel="stylesheet" href="css/estilos.css" />
   <link rel="shortcut icon" href="img/iconolacd21.png" type="image/x-icon">
   <title>Investigación | LaCDi</title>
 </head>
@@ -25,6 +27,12 @@
             alt="Laboratorio de Creación Digital"
           />
         </a>
+        <!-- Buttom theme -->
+      <button class="theme-button">
+        <span id="mode" class="bg-c material-icons-two-tone">
+          light_mode
+        </span>
+      </button>
         <!-- Menu de Hamburguesa -->
         <button class="btn-menu hamburger hamburger--spin" type="button">
           <span class="hamburger-box">
@@ -35,7 +43,7 @@
         <nav class="menu">
           <ul class="menu-style">
             <li><a href="lacdi.html">LaCDi</a></li>
-            <li><a href="investigación.html">Investigación</a></li>
+            <li><a href="investigacion.html" class="link-active">Investigación</a></li>
             <li><a href="vinculacion.html">Vinculación</a></li>
             <li><a href="creacion-digital.html">Creación Digital</a></li>
             <li><a href="exposiciones.html">Exposiciones</a></li>
