--- a/investigacion.html
+++ b/investigacion.html
@@ -29,7 +29,7 @@
         </a>
         <!-- Buttom theme -->
       <button class="theme-button">
-        <span id="mode" class="bg-c material-icons-two-tone">
+        <span id="mode" class="bg-c s-4 material-icons-two-tone">
           light_mode
         </span>
       </button>
@@ -75,56 +75,10 @@
     </section>
     <hr>
     <section class="container">
-      <article class="row">
+      <article id="eventos-investigacion" class="row">
         <h2>Proyectos</h2>
         <section class="card mx-auto mt-4" style="max-width: 360px;">
-          <article class="row card-m0">
-            <div class="col-6 pe-0 ps-0 card-m0">
-              <img src="https://placeimg.com/480/580/people" class="img-fluid rounded-start" alt="Evento X">
-            </div>
-            <article class="col-6 ps-0 card-m0">
-              <div class="card-body">
-                <h5 class="text-card-t">Titulación de Andrés Mata</h5> <!-- Máximo 25 caracteres -->
-                <p class="text-card-s">Andrés Mata Cano, estudiante de la licenciatura en Animación y Arte
-                  Digital.
-                </p> <!-- Máximo 76 caracteres -->
-                <a href="#" class="btn btn-sm color-btn-cp">Más</a>
-              </div>
-            </article>
-          </article>
-        </section>
-        <section class="card mx-auto mt-4" style="max-width: 360px;">
-          <article class="row card-m0 reverse">
-            <article class="col-6 card-m0">
-              <div class="card-body pe-0">
-                <h5 class="text-card-t">Titulación de Andrés Mata</h5> <!-- Máximo 25 caracteres -->
-                <p class="text-card-s">Andrés Mata Cano, estudiante de la licenciatura en Animación y Arte Digital.
-                </p> <!-- Máximo 76 caracteres -->
-                <a href="#" class="btn btn-sm color-btn-ce">Más</a>
-              </div>
-            </article>
-            <div class="col-6 pe-0 ps-0 card-m0">
-              <img src="https://placeimg.com/480/580/people" class="img-fluid rounded-start" alt="Evento X">
-            </div>
-          </article>
-        </section>
-        <section class="card mx-auto mt-4" style="max-width: 360px;">
-          <article class="row card-m0">
-            <div class="col-6 pe-0 ps-0 card-m0">
-              <img src="https://placeimg.com/480/580/people" class="img-fluid rounded-start" alt="Evento X">
-            </div>
-            <article class="col-6 ps-0 card-m0">
-              <div class="card-body">
-                <h5 class="text-card-t">Titulación de Andrés Mata</h5> <!-- Máximo 25 caracteres -->
-                <p class="text-card-s">Andrés Mata Cano, estudiante de la licenciatura en Animación y Arte Digital.
-                </p> <!-- Máximo 76 caracteres -->
-                <a href="#" class="btn btn-sm color-btn-cc">Más</a>
-              </div>
-            </article>
-          </article>
-        </section>
-        <section class="card mx-auto mt-4" style="max-width: 360px;">
-          <article class="row card-m0 reverse">
+          <article class="row card-m0 bg-c-fondo reverse">
             <article class="col-6 ps-0 card-m0">
               <div class="card-body">
                 <h5 class="text-card-t">Titulación de Andrés Mata</h5> <!-- Máximo 25 caracteres -->
@@ -139,7 +93,7 @@
           </article>
         </section>
         <section class="card mx-auto mt-4" style="max-width: 360px;">
-            <article class="row card-m0">
+            <article class="row card-m0 bg-c-fondo">
               <div class="col-6 pe-0 ps-0 card-m0">
                 <img src="https://placeimg.com/480/580/people" class="img-fluid rounded-start" alt="Evento X">
               </div>
@@ -154,7 +108,7 @@
             </article>
         </section>
         <section class="card mx-auto mt-4" style="max-width: 360px;">
-              <article class="row card-m0 reverse">
+              <article class="row card-m0 bg-c-fondo reverse">
                 <article class="col-6 ps-0 card-m0">
                   <div class="card-body">
                     <h5 class="text-card-t">Titulación de Andrés Mata</h5> <!-- Máximo 25 caracteres -->
