--- a/lacdi.html
+++ b/lacdi.html
@@ -40,7 +40,7 @@
       </a>
       <!-- Buttom theme -->
       <button class="theme-button">
-        <span id="mode" class="bg-c material-icons-two-tone">
+        <span id="mode" class="bg-c s-4 material-icons-two-tone">
           light_mode
         </span>
       </button>
@@ -97,7 +97,7 @@
           <h2>Miembros</h2>
           <section class="mb-5 row row-cols-1 row-cols-md-3 g-4">
             <section
-              class="card border-cp mx-auto mt-4 shadow-"
+              class="card border-cp mx-auto mt-4 shadow- bg-c-fondo"
               style="max-width: 360px;"
             >
               <article class="row card-m0">
@@ -121,7 +121,7 @@
               </article>
             </section>
             <section
-              class="card border-cp mx-auto mt-4 shadow-"
+              class="card border-cp mx-auto mt-4 shadow- bg-c-fondo"
               style="max-width: 360px;"
             >
               <article class="row card-m0 reverse">
@@ -147,7 +147,7 @@
               </article>
             </section>
             <section
-              class="card border-cp mx-auto mt-4 shadow-"
+              class="card border-cp mx-auto mt-4 shadow- bg-c-fondo"
               style="max-width: 360px;"
             >
               <article class="row card-m0">
