--- a/creacion-digital.html
+++ b/creacion-digital.html
@@ -34,7 +34,7 @@
         </a>
         <!-- Buttom theme -->
       <button class="theme-button">
-        <span id="mode" class="bg-c material-icons-two-tone">
+        <span id="mode" class="bg-c s-4 material-icons-two-tone">
           light_mode
         </span>
       </button>
@@ -158,53 +158,7 @@
     </section>
     <hr>
     <section class="container">
-      <article class="row">
-        <section class="card mx-auto mt-4" style="max-width: 360px;">
-          <article class="row card-m0 reverse">
-            <article class="col-6 ps-0 card-m0">
-              <div class="card-body">
-                <h5 class="text-card-t">Titulación de Andrés Mata</h5> <!-- Máximo 25 caracteres -->
-                <p class="text-card-s">Andrés Mata Cano, estudiante de la licenciatura en Animación y Arte
-                  Digital.
-                </p> <!-- Máximo 76 caracteres -->
-                <a href="#" class="btn btn-sm color-btn-cp">Más</a>
-              </div>
-            </article>
-            <div class="col-6 pe-0 ps-0 card-m0">
-              <img src="https://placeimg.com/480/580/people" class="img-fluid rounded-start" alt="Evento X">
-            </div>
-          </article>
-        </section>
-        <section class="card mx-auto mt-4" style="max-width: 360px;">
-          <article class="row card-m0">
-            <div class="col-6 pe-0 ps-0 card-m0">
-              <img src="https://placeimg.com/480/580/people" class="img-fluid rounded-start" alt="Evento X">
-            </div>
-            <article class="col-6 card-m0">
-              <div class="card-body pe-0">
-                <h5 class="text-card-t">Titulación de Andrés Mata</h5> <!-- Máximo 25 caracteres -->
-                <p class="text-card-s">Andrés Mata Cano, estudiante de la licenciatura en Animación y Arte Digital.
-                </p> <!-- Máximo 76 caracteres -->
-                <a href="#" class="btn btn-sm color-btn-ce">Más</a>
-              </div>
-            </article>
-          </article>
-        </section>
-        <section class="card mx-auto mt-4" style="max-width: 360px;">
-          <article class="row card-m0 reverse">
-            <article class="col-6 ps-0 card-m0">
-              <div class="card-body">
-                <h5 class="text-card-t">Titulación de Andrés Mata</h5> <!-- Máximo 25 caracteres -->
-                <p class="text-card-s">Andrés Mata Cano, estudiante de la licenciatura en Animación y Arte Digital.
-                </p> <!-- Máximo 76 caracteres -->
-                <a href="#" class="btn btn-sm color-btn-cc">Más</a>
-              </div>
-            </article>
-            <div class="col-6 pe-0 ps-0 card-m0">
-              <img src="https://placeimg.com/480/580/people" class="img-fluid rounded-start" alt="Evento X">
-            </div>
-          </article>
-        </section>
+      <article id="soundCloud" class="row">
       </article>
     </section>
     <div class="container">
