--- a/exposiciones.html
+++ b/exposiciones.html
@@ -39,7 +39,7 @@
       </a>
       <!-- Buttom theme -->
       <button class="theme-button">
-        <span id="mode" class="bg-c material-icons-two-tone">
+        <span id="mode" class="bg-c s-4 material-icons-two-tone">
           light_mode
         </span>
       </button>
