--- a/vinculacion.html
+++ b/vinculacion.html
@@ -42,7 +42,7 @@
       </a>
       <!-- Buttom theme -->
       <button class="theme-button">
-        <span id="mode" class="bg-c material-icons-two-tone">
+        <span id="mode" class="bg-c s-4 material-icons-two-tone">
           light_mode
         </span>
       </button>
@@ -113,7 +113,7 @@
         <article class="row">
           <h2>Proyectos</h2>
           <section class="card mx-auto mt-4" style="max-width: 360px;">
-            <article class="row card-m0">
+            <article class="row card-m0 bg-c-fondo">
               <div class="col-6 pe-0 ps-0 card-m0">
                 <img
                   src="https://placeimg.com/480/580/people"
@@ -136,7 +136,7 @@
             </article>
           </section>
           <section class="card mx-auto mt-4" style="max-width: 360px;">
-            <article class="row card-m0 reverse">
+            <article class="row card-m0 bg-c-fondo reverse">
               <article class="col-6 card-m0">
                 <div class="card-body pe-0">
                   <h5 class="text-card-t">Titulación de Andrés Mata</h5>
@@ -159,7 +159,7 @@
             </article>
           </section>
           <section class="card mx-auto mt-4" style="max-width: 360px;">
-            <article class="row card-m0">
+            <article class="row card-m0 bg-c-fondo">
               <div class="col-6 pe-0 ps-0 card-m0">
                 <img
                   src="https://placeimg.com/480/580/people"
@@ -182,7 +182,7 @@
             </article>
           </section>
           <section class="card mx-auto mt-4" style="max-width: 360px;">
-            <article class="row card-m0 reverse">
+            <article class="row card-m0 bg-c-fondo reverse">
               <article class="col-6 ps-0 card-m0">
                 <div class="card-body">
                   <h5 class="text-card-t">Titulación de Andrés Mata</h5>
@@ -205,7 +205,7 @@
             </article>
           </section>
           <section class="card mx-auto mt-4" style="max-width: 360px;">
-            <article class="row card-m0">
+            <article class="row card-m0 bg-c-fondo">
               <div class="col-6 pe-0 ps-0 card-m0">
                 <img
                   src="https://placeimg.com/480/580/people"
@@ -228,7 +228,7 @@
             </article>
           </section>
           <section class="card mx-auto mt-4" style="max-width: 360px;">
-            <article class="row card-m0 reverse">
+            <article class="row card-m0 bg-c-fondo reverse">
               <article class="col-6 ps-0 card-m0">
                 <div class="card-body">
                   <h5 class="text-card-t">Titulación de Andrés Mata</h5>
