--- a/index.html
+++ b/index.html
@@ -66,139 +66,22 @@
 
     <section class="container-fluid">
       <span id="top" class="ancla"></span>
-      <section class="row">
-        <article class="p-0">
-          <article
-            id="carouselExampleControls"
-            class="carousel slide mt-0"
-            data-bs-ride="carousel"
-          >
-            <section class="carousel-inner">
-              <div class="carousel-item active">
-                <img
-                  src="https://placeimg.com/1500/720/people"
-                  class="d-block w-100"
-                  alt="..."
-                />
-              </div>
-              <div class="carousel-item">
-                <img
-                  src="https://placeimg.com/1500/720/animals"
-                  class="d-block w-100"
-                  alt="..."
-                />
-              </div>
-              <div class="carousel-item">
-                <img
-                  src="https://placeimg.com/1500/720/arquitechture"
-                  class="d-block w-100"
-                  alt="..."
-                />
-              </div>
-            </section>
-            <button
-              class="carousel-control-prev"
-              type="button"
-              data-bs-target="#carouselExampleControls"
-              data-bs-slide="prev"
-            >
-              <span
-                class="carousel-control-prev-icon"
-                aria-hidden="true"
-              ></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button
-              class="carousel-control-next"
-              type="button"
-              data-bs-target="#carouselExampleControls"
-              data-bs-slide="next"
-            >
-              <span
-                class="carousel-control-next-icon"
-                aria-hidden="true"
-              ></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </article>
-          <article id="descripcion" class="container col-12">
-            <h2>¿Qué es Lacdi?</h2>
-          </article>
+      <section class="carrousel">
+        <article class="grande">
+          <img src="/img/lab-1.jpg" alt="Imagen1" class="img-carrousel" />
+          <img src="/img/lab-2.jpg" alt="Imagen2" class="img-carrousel" />
+          <img src="/img/lab-3.jpg" alt="Imagen3" class="img-carrousel" />
         </article>
+        <ul class="puntos">
+          <li class="punto"></li>
+          <li class="punto"></li>
+          <li class="punto"></li>
+        </ul>
       </section>
       <hr />
       <section class="container">
         <article id="eventos" class="row">
           <h2>Últimos Eventos</h2>
-          <section class="card mx-auto mt-4" style="max-width: 360px;">
-            <article class="row card-m0 border">
-              <div class="col-6 pe-0 ps-0 card-m0">
-                <img
-                  src="https://placeimg.com/480/580/people"
-                  class="img-fluid rounded-start"
-                  alt="Evento X"
-                />
-              </div>
-              <article class="col-6 ps-0 card-m0 bg-c-fondo">
-                <div class="card-body">
-                  <h5 class="text-card-t">Titulación de Andrés Mata</h5>
-                  <!-- Máximo 25 caracteres -->
-                  <p class="text-card-s">
-                    Andrés Mata Cano, estudiante de la licenciatura en Animación
-                    y Arte Digital.
-                  </p>
-                  <!-- Máximo 76 caracteres -->
-                  <a href="#" class="btn btn-sm color-btn-cp">Más</a>
-                </div>
-              </article>
-            </article>
-          </section>
-          <section class="card mx-auto mt-4" style="max-width: 360px;">
-            <article class="row card-m0 reverse border">
-              <article class="col-6 card-m0 bg-c-fondo">
-                <div class="card-body pe-0">
-                  <h5 class="text-card-t">Titulación de Andrés Mata</h5>
-                  <!-- Máximo 25 caracteres -->
-                  <p class="text-card-s">
-                    Andrés Mata Cano, estudiante de la licenciatura en Animación
-                    y Arte Digital.
-                  </p>
-                  <!-- Máximo 76 caracteres -->
-                  <a href="#" class="btn btn-sm color-btn-ce">Más</a>
-                </div>
-              </article>
-              <div class="col-6 pe-0 ps-0 card-m0">
-                <img
-                  src="https://placeimg.com/480/580/people"
-                  class="img-fluid rounded-start"
-                  alt="Evento X"
-                />
-              </div>
-            </article>
-          </section>
-          <section class="card mx-auto mt-4" style="max-width: 360px;">
-            <article class="row card-m0 border">
-              <div class="col-6 pe-0 ps-0 card-m0">
-                <img
-                  src="https://placeimg.com/480/580/people"
-                  class="img-fluid rounded-start"
-                  alt="Evento X"
-                />
-              </div>
-              <article class="col-6 ps-0 card-m0 bg-c-fondo">
-                <div class="card-body">
-                  <h5 class="text-card-t">Titulación de Andrés Mata</h5>
-                  <!-- Máximo 25 caracteres -->
-                  <p class="text-card-s">
-                    Andrés Mata Cano, estudiante de la licenciatura en Animación
-                    y Arte Digital.
-                  </p>
-                  <!-- Máximo 76 caracteres -->
-                  <a href="#" class="btn btn-sm color-btn-cp">Más</a>
-                </div>
-              </article>
-            </article>
-          </section>
         </article>
       </section>
       <hr />
